[tool.poetry]
name = "monitor"
version = "0.1.0"
description = ""
authors = ["rlkelly <robert.l.kelly3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
web3 = "^6.0.0"
peewee = "^3.15.4"
python-json-logger = "^2.0.4"
cryptography = "^39.0.0"

[tool.poetry.scripts]
monitor = 'monitor:run'
sync = 'monitor.sync:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
